# minikeyvalue

./: Cargo.toml  README.md  build.zig  flake.nix
src/: lib.rs  s3.zig  s3api.rs  server.rs  server.zig
