[package]
name = "minikeyvalue-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
base64 = "0.22.1"
md5 = "0.7.0"
quick-xml = "0.35.0"
reqwest = "0.12.5"
rocksdb = "0.22.0"
serde = "1.0.203"
